# templatepython

./: .gitignore  .pyproject.toml.swp  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  mkdocs.yml  pyproject.toml
devtools/: dochelper.py
doc/: changelog.md  design.md  development.md  environment.md  index.md  installation.md  license.md  publishing.md  support.md  usage.md  validation.md  versioning.md
src/templatepython/: __about__.py  __init__.py  __main__.py  _about.py  cli.py  config.py  wsgi.py
src/templatepython/_data/: wsgi_config_default.toml
src/templatepython/cli/: .__init__.py.swp  __init__.py
src/templatepython/templates/: _base.html  index.html
tests/: __init__.py  test_about.py  test_imports.py
